--- a/tools/index.html
+++ b/tools/index.html
@@ -37,13 +37,7 @@
         <h2>Windows</h2>
         <ul>
           <br>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2005.zip">Visual C++ 2005</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2008.zip">Visual C++ 2008</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2010.zip">Visual C++ 2010</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2013.zip">Visual C++ 2013</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2015.zip">Visual C++ 2015</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2017.zip">Visual C++ 2017</a></li>
-          <li><a href="https://dl.malwat.ch/software/features/vcredist/VCRedist2019.zip">Visual C++ 2019</a></li>          
+            <li><a href="https://www.mediafire.com/file/yiujx13gxu5g2wq/vcredist.exe/file">Visual C++ All Pack</a></li>          
         </ul>
          </section>
     </div>
