--- a/tools/index.html
+++ b/tools/index.html
@@ -37,7 +37,7 @@
         <h2>Windows</h2>
         <ul>
           <br>
-            <li><a href="https://www.mediafire.com/file/yiujx13gxu5g2wq/vcredist.exe/file">Visual C++ All Pack</a></li>          
+            <li><a href="https://github.com/Atlas-OS/Atlas/raw/main/src/AtlasModules/vcredist.exe">Visual C++ All Pack</a></li>          
         </ul>
          </section>
     </div>
