--- a/tools/index.html
+++ b/tools/index.html
@@ -31,7 +31,7 @@
           <li><a href="https://nc.arbe.cc/index.php/s/RmypokaLzCBELKy?path=%2F">Counter-Strike All Surf Map</a></li>
           <li><a href="https://disk.yandex.com.tr/d/2JbdxokzX5fVsg">Counter-Strike Movie Tools</a></li>
         </ul>
-        <a target="_blank" href="https://telegram.me/hypecs" class="more">for more files<svg viewBox="0 0 10 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path class="arrow" d="M1.01362083,12.9421826 L1,15.6012598 L9.21426767,8.3533766 L1.07301897,1.34639246 L1.05985086,3.91708947 L6.21426767,8.3533766 L1.01362083,12.9421826 Z"></path></svg></a>
+        <a target="_blank" href="https://telegram.me/lujiangz" class="more">for more files<svg viewBox="0 0 10 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path class="arrow" d="M1.01362083,12.9421826 L1,15.6012598 L9.21426767,8.3533766 L1.07301897,1.34639246 L1.05985086,3.91708947 L6.21426767,8.3533766 L1.01362083,12.9421826 Z"></path></svg></a>
       </section>
       <section id="windowsTools">
         <h2>Windows</h2>
