--- a/tools/index.html
+++ b/tools/index.html
@@ -37,7 +37,9 @@
         <h2>Windows</h2>
         <ul>
           <br>
-            <li><a href="https://github.com/Atlas-OS/Atlas/raw/main/src/AtlasModules/Apps/vcredist.exe">Visual C++ All Pack</a></li>          
+            <li><a href="https://interium.ooo/faq/visualc.exe">Visual C++ All Pack</a></li>  
+            <li><a href="https://interium.ooo/faq/dx.exe">DirectX Library</a></li>  
+            <li><a href="https://interium.ooo/faq/runtime.exe">Microsoft Runtime libraries</a></li>   
         </ul>
          </section>
     </div>
