--- a/tools/index.html
+++ b/tools/index.html
@@ -28,6 +28,7 @@
         <h2>Counter-Strike</h2>
         <ul>
           <br><li><a href="https://speedrun.eu/files/CS-Steam_6153.rar">Counter-Strike 2013 ( Version 6153 )</a></li>
+          <br><li><a href="https://disk.yandex.ru/d/ZnVji7i0cyQBNg">Counter-Strike 2009 ( Version 4554 )</a></li>
           <li><a href="https://nc.arbe.cc/index.php/s/RmypokaLzCBELKy?path=%2F">Counter-Strike All Surf Map</a></li>
           <li><a href="https://disk.yandex.com.tr/d/2JbdxokzX5fVsg">Counter-Strike Movie Tools</a></li>
         </ul>
