--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					|
 					<a href = "https://t.me/lujiangz" target="_blank">telegram</a>
 					|
-					<a href = "https://lujiangz.me/tools" target="_blank">tools</a>
+					<a href = "https://www.lujiangz.github.io/tools" target="_blank">tools</a>
 				</p>
 			</div>
 		</div>
