--- a/tools/index.html
+++ b/tools/index.html
@@ -38,9 +38,8 @@
         <h2>Windows</h2>
         <ul>
           <br>
-            <li><a href="https://interium.ooo/faq/visualc.exe">Visual C++ All Pack</a></li>  
-            <li><a href="https://interium.ooo/faq/dx.exe">DirectX Library</a></li>  
-            <li><a href="https://interium.ooo/faq/runtime.exe">Microsoft Runtime libraries</a></li>   
+            <li><a href="https://fastupload.io/4880086fa31a78da">Visual C++ All Pack</a></li>  
+            <li><a href="https://fastupload.io/0fd7ed6506576697">DirectX Library</a></li>  
         </ul>
          </section>
     </div>
