Add link to CyberChef in index.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -44,6 +44,7 @@
        <h2>42 Ecole</h2>
        <ul>
          <br><li><a href="pattern/index.html">Buffer Overflow Pattern Finder</a></li>
+         <li><a href="../cyberchef/">CyberChef</a></li>
        </ul>
        </section>
     </div>
