Update Counter-Strike links in index.html

--- a/tools/index.html
+++ b/tools/index.html
@@ -27,7 +27,8 @@
       <section id="counterstrike">
         <h2>Counter-Strike</h2>
         <ul>
-          <br><li><a href="https://speedrun.eu/files/CS-Steam_6153.rar">Counter-Strike 2013 ( Version 6153 )</a></li>
+          <br><li><a href="https://speedrun.eu/files/Old-CS_Surf-Gateway.zip">Counter-Strike 2009 ( Version 4554 )</a></li>
+          <li><a href="https://speedrun.eu/files/CS-Steam_6153.rar">Counter-Strike 2013 ( Version 6153 )</a></li>
           <li><a href="https://disk.yandex.com.tr/d/2JbdxokzX5fVsg">Counter-Strike Movie Tools</a></li>
         </ul>
         <a target="_blank" href="https://telegram.me/lujiangz" class="more">for more files<svg viewBox="0 0 10 16" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><path class="arrow" d="M1.01362083,12.9421826 L1,15.6012598 L9.21426767,8.3533766 L1.07301897,1.34639246 L1.05985086,3.91708947 L6.21426767,8.3533766 L1.01362083,12.9421826 Z"></path></svg></a>
